# mirrordescent

./: README.md  dimensions.json  pyproject.toml
mirrordescent/: distributions.py  experiments.py  main.py  mirror_maps.py  plotting.py  sampler.py  utils.py
tests/: test_mirror_maps.py
