[tool.poetry]
name = "mirrordescent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
numpy = "^2.1.2"
pytest = "^8.3.3"
plotly = "^5.24.1"
scikit-image = "^0.24.0"
tqdm = "^4.66.5"
pathos = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
